Update to "To-Do" list w/ GraphQL + Auth

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>To the Power of Math!</title>
-</head>
+  </head>
 
-<body>
+  <body>
     To the Power of Math!
-</body>
+  </body>
 </html>
